<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:title="Check box preference"
        android:key="check_box_preference_1" />
    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="@string/location_selectallonfocus"
        android:singleLine="@string/location_singleline"
        android:title="@string/location_title"
        android:key="@string/pref_location_key" />
    <ListPreference
        android:defaultValue="1"
        android:title="Units"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key" />
</PreferenceScreen>